Fix spacing on party list.

--- a/parlassets/scss/_party_list.scss
+++ b/parlassets/scss/_party_list.scss
@@ -9,7 +9,7 @@
   }
   .party {
     @extend %flex;
-    line-height: 40px;
+    line-height: 30px;
     padding: 5px 0;
     .column {
       font-family: Roboto, sans-serif;
